--- a/Stat_628_Module_2_re.ipynb
+++ b/Stat_628_Module_2_re.ipynb
@@ -76,14 +76,14 @@
     "According to emsemble learning, mixture of models usually beats any single one. In light of that, Lasso regression and simple average were used for the predictions of 20 pre-models to achieve better performance. For convenience, we denoted their results as Lasso and Mean resepctively. Eventually, our final predictions were calculated by:\n",
     "\n",
     "\\begin{align*}\n",
-    "Final \\ Prediction = \\frac{Lasso + Mean}{2}\n",
+    "Final \\ Prediction = (Lasso + Mean)/2\n",
     "\\end{align*}\n",
     "\n",
     "### 4.4 Model Evaluations\n",
     "\n",
     "From the graph below, the final emsemble model shows the best predictive power. All models were trained based on 1.5 millions training set and the results were RMSE computed by Kaggle.\n",
     "\n",
-    "<img src=\"rmse_barplot.jpeg\" alt=\"Root Mean Square Error\" style=\"width: 550px;\"/>\n",
+    "<img src=\"rmse_barplot.jpeg\" alt=\"Root Mean Square Error\" style=\"width: 500px; height: 300px\"/>\n",
     "\n",
     "\n",
     "* **Strengths**\n",
@@ -128,13 +128,6 @@
     "|Jiashun Cheng| basic data investigation, created a dictionary with scores based on training data, conducted basic features extraction, tuned models' parameters|\n",
     "|Yilun Chen| data cleaning, created the sparse matrix with unigram&bigram features, built up regression and classification models, proposed final model|"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
