--- a/Stat_628_Module_2_re.ipynb
+++ b/Stat_628_Module_2_re.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Raings Prediction\n",
+    "## 4. Ratings Prediction\n",
     "\n",
     "### 4.1 Model Description\n",
     "\n",
@@ -68,6 +68,8 @@
     "### 4.2 Feature Consruction\n",
     "\n",
     "In order to include as much as possible useful textual information, every single word and every words' combination(bigram) of each comment are all considered and are represented by a super large sparse matrix created by number counting. In addition, to scale data, TF-IDF was applied to the raw sparse. A visual workflow is shown below.\n",
+    "\n",
+    "<img src=\"workflow.png\" alt=\"workflow\" />\n",
     "\n",
     "### 4.3 Model Fitting\n",
     "\n",
@@ -83,7 +85,7 @@
     "\n",
     "From the graph below, the final emsemble model shows the best predictive power. All models were trained based on 1.5 millions training set and the results were RMSE computed by Kaggle.\n",
     "\n",
-    "<img src=\"rmse_barplot.jpeg\" alt=\"Root Mean Square Error\" style=\"width: 500px; height: 300px\"/>\n",
+    "<img src=\"rmse_barplot.jpeg\" alt=\"Root Mean Square Error\" />\n",
     "\n",
     "\n",
     "* **Strengths**\n",
