--- a/Stat_628_Module_2_re.ipynb
+++ b/Stat_628_Module_2_re.ipynb
@@ -45,10 +45,37 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Polarity Analysis"
+    "## 3. Polarity Analysis\n",
+    "\n",
+    "Before we find out what makes a review positive or negative, definition of them should be clarified first. In this case, reviews with ratings lower than 3 are considered as negative while those with 4, 5 stars are viewed as positive. In other words, neutral information is abandoned. Then, a scoring function $Polarity(x)$ and some notations are introduced:\n",
+    "\n",
+    "$$Negative(x) = \\frac{\\text{num of x in negative reviews}}{\\text{total num of words in negative reviews}}, \\ Positive(x) = \\frac{\\text{num of x in positive reviews}}{\\text{total num of words in positive reviews}}$$\n",
+    "\n",
+    "$$Polarity(x) = \\frac{Negative(x)}{Positive(x)}$$\n",
+    "\n",
+    "By intuition, $Polarity(x)$ reveals how extreme this word can be based on the biasness of occurence. \n",
+    "\n",
+    "Surprisingly, some results are quite interesting. Words with super high $Polarity$ score are mostly connected to some kinds of behaviours instead of food quality. For example, \n",
+    "\n",
+    "|Words         | combative | dishonesty | unprofessionalism | disgraceful | discriminates| disrespected|\n",
+    "|--------------|-----------|------------| ----------------- |-------------|--------------|-------------|\n",
+    "|Polarity Score| 139.067330| 136.538833 | 85.968895         | 61.948174   | 58.155429    |  57.006112  |\n",
+    "\n",
+    "However, positive reviews contain more exclamatory and \"streched\" words than ordinary adjectives, which is totally unexpected. In addition, they are usually used to appreciate the food quality. Several examples are shown below,\n",
+    "\n",
+    "|Words         | yummo | yummmmy | mmmmmmmmmm | yummmmmmm | deeelish| deeeeelicious|\n",
+    "|--------------|-------|------------| ---------|----------|---------|-------------|\n",
+    "|Polarity Score| 0.016857| 0.026616 | 0.032417 | 0.036121 | 0.036645| 0.037184    |\n",
+    "\n",
+    "Moreover, common words that we expect them to be emotional tend to be irrelavent in terms of sentimental fields. For instance, \"good\" gets only 0.638613 with \"bad\" being 3.166577. \n",
+    "\n",
+    "In conclusion, two simple but meaningful findings are worth more investigation:\n",
+    "* Negative reviews may be mainly because of bad service.\n",
+    "* Great food quality is more likely to encourage customers to express their satisfaction instead of service and environment."
    ]
   },
   {
@@ -102,7 +129,11 @@
    "metadata": {},
    "source": [
     "## 5. Conclusions\n",
-    "\n"
+    "\n",
+    "According to polarity analysis, we'd like to give some suggestions:\n",
+    "* Service may not be the most important factor that brings a restaurant a good review, but maintaining good service will at least let the restaurant to be average.\n",
+    "\n",
+    "* If one restaurant is around average already, providing delicious food may be the best way for it to become a popular and top restaurant."
    ]
   },
   {
